--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_NAME=小云陪护
+VUE_APP_NAME=WT_ADMIN
 VUE_APP_ROUTES_KEY=admin.routes
 VUE_APP_PERMISSIONS_KEY=admin.permissions
 VUE_APP_ROLES_KEY=admin.roles
